--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
         </ul>
 
     </div>
-        <video id="bgVideo" muted autoplay loop src="video1.mp4"></video>
+    <div class="bgvid"><video id="bgVideo" muted autoplay loop src="video1.mp4"></video></div>
     <div id="myNav" class="overlay">
 
         <!-- Button to close the overlay navigation -->
