--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Portfolio</title>
     <script src="https://kit.fontawesome.com/ffac8fc367.js" crossorigin="anonymous"></script>
-    <link href="https://fonts.googleapis.com/css?family=Heebo|Roboto|Rubik&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Heebo|Odibee+Sans|Roboto|Rubik&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="main.css">
 </head>
 <body>
@@ -28,7 +28,7 @@
         <div class="overlay-content">
             <input type="text" id="mySearch" onkeyup="mySearch()" placeholder="Search for a project..." title="Type in a category">
           <div class="overlay-elements">
-              <h2>HFG</h2>
+              <h2 class="hfg">HFG</h2>
               <p>A simple yet elegant website for <br> 
                   NISB's Hardware Focus Group</p>
           </div>
@@ -38,7 +38,7 @@
       <main>
           <div class="mainBanner">
               <div class="name">Shreesh<br>Kulkarni</div>
-              <p class="description">Technocrat,<br>Frontend Web Developer<br>Amatuer Photographer.</p>
+              <p class="description">Technocrat<br>Frontend Web Developer<br>Amatuer Photographer</p>
               <div class="socialNav">
                 <a href="#" class="fab fa-github"></a>
                 <a href="#" class="far fa-envelope"></a>
