--- a/resume/resume.html
+++ b/resume/resume.html
@@ -3,17 +3,20 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Portfolio</title>
+    <title>Portfolio-Resume</title>
     <script src="https://kit.fontawesome.com/ffac8fc367.js" crossorigin="anonymous"></script>
     <link href="https://fonts.googleapis.com/css?family=Heebo|Odibee+Sans|Roboto|Rubik&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="main.css">
+    <link rel="stylesheet" href="resume.css">
 </head>
 <body>
+    
+
+
     <div class="main-nav">
         <h1>Portfolio</h1>
         <ul>
-            <li><a class="current" href="#">Home</a></li>
-            <li><a href="resume/resume.html">Resume</a></li>
+            <li><a href="../index.html">Home</a></li>
+            <li><a class="current" href="#">Resume</a></li>
             <li><a onclick="openNav()" href="#">Projects</a></li>
             <li><a href="#">Contact</a></li>
         </ul>
@@ -35,17 +38,20 @@
         </div>
       
       </div>
+
+
+
       <main>
-          <div class="mainBanner">
-              <div class="name">Shreesh<br>Kulkarni</div>
-              <p class="description">Technocrat<br>Frontend Web Developer<br>Amatuer Photographer</p>
-              <div class="socialNav">
-                <a href="github.com/sgkul2000" class="fab fa-github"></a>
-                <a href="mailto:sgkul2000@gmail.com" class="far fa-envelope"></a>
-                <a href="linkedin.com" class="fab fa-linkedin"></a>
-              </div>
-          </div>
+        <img id="res" src="Resume.png" alt="Resume">
+        <div id="downloadLink">
+                <a href="#">
+                    <a href="Resume.png" download="Shreesh's Resume" class="downloadText">
+                        <i class="fas fa-download"></i><div class="dText">Download</div> 
+                    </a>
+                </a>
+        </div>
       </main>
-      <script src="main.js"></script>
+
+<script src="../main.js"></script>
 </body>
 </html>
