contact page initial sketch done

--- a/resume/resume.html
+++ b/resume/resume.html
@@ -18,11 +18,10 @@
             <li><a href="../index.html">Home</a></li>
             <li><a class="current" href="#">Resume</a></li>
             <li><a onclick="openNav()" href="#">Projects</a></li>
-            <li><a href="#">Contact</a></li>
+            <li><a href="../contact/contact.html">Contact</a></li>
         </ul>
 
     </div>
-    <div class="bgvid"><video id="bgVideo" muted autoplay loop src="video1.mp4"></video></div>
     <div id="myNav" class="overlay">
 
         <!-- Button to close the overlay navigation -->
