--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
             <li><a class="current" href="#">Home</a></li>
             <li><a href="resume/resume.html">Resume</a></li>
             <li><a onclick="openNav()" href="#">Projects</a></li>
-            <li><a href="#">Contact</a></li>
+            <li><a href="contact/contact.html">Contact</a></li>
         </ul>
 
     </div>
