--- a/contact/contact.html
+++ b/contact/contact.html
@@ -56,7 +56,10 @@
             <div id="socializeHeading">Wanna socialize?</div>
             <div class="socialElements">
               <a href="https://instagram.com/kulkarni.shreesh" class="fab fa-instagram"></a>
+              <a target="_blank" href="https://www.snapchat.com/add/sgkul" class="fab fa-snapchat"></a>
+              <a href="tel:9606698912" class="fas fa-phone"></a>
             </div>
+            
 
 
         </div>
