--- a/resume/resume.html
+++ b/resume/resume.html
@@ -7,6 +7,12 @@
     <script src="https://kit.fontawesome.com/ffac8fc367.js" crossorigin="anonymous"></script>
     <link href="https://fonts.googleapis.com/css?family=Heebo|Odibee+Sans|Roboto|Rubik&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="resume.css">
+
+    <link rel="apple-touch-icon" sizes="180x180" href="../branding/favicon_io/apple-touch-icon.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="../branding/favicon_io/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="../branding/favicon_io/favicon-16x16.png">
+    <link rel="manifest" href="branding/favicon_io/site.webmanifest">
+
 </head>
 <body>
     
