logo branding done.

--- a/contact/contact.html
+++ b/contact/contact.html
@@ -16,7 +16,9 @@
 </head>
 <body>
     <div class="main-nav">
-        <h1>Portfolio</h1>
+      <span id="mainBrand">
+        <img id="logoImg" src="../branding/logo-via-logohub (1).png" alt="">
+        <h1>Portfolio</h1></span>
         <ul>
             <li><a href="../index.html">Home</a></li>
             <li><a href="../resume/resume.html">Resume</a></li>
