--- a/resume/resume.html
+++ b/resume/resume.html
@@ -19,7 +19,9 @@
 
 
     <div class="main-nav">
-        <h1>Portfolio</h1>
+        <span id="mainBrand">
+            <img id="logoImg" src="../branding/logo-via-logohub (1).png" alt="">
+            <h1>Portfolio</h1></span>
         <ul>
             <li><a href="../index.html">Home</a></li>
             <li><a class="current" href="#">Resume</a></li>
